[package]
name    = "hop-hash"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default                  = [ "std", "density-ninety-two" ]
eight-way                = [  ]
density-eight-seven-five = [  ]
density-ninety-two       = [  ]
density-ninety-seven     = [  ]
std                      = [  ]

[dependencies]
cfg-if = "1.0.3"

[dev-dependencies]
criterion  = "0.7.0"
hashbrown  = "0.16.0"
rand       = { version = "0.9.2", default-features = false, features = [ "os_rng", "small_rng" ] }
rand_distr = "0.5.1"
siphasher  = "1.0.1"

[profile.release-with-debug]
debug    = true
inherits = "release"

[[bench]]
name    = "hashtable_comparison"
harness = false
