[package]
name         = "hop-hash"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89.0"
license      = "MIT OR Apache-2.0"
categories   = [ "data-structures", "algorithms", "no-std" ]
keywords     = [ "hashmap", "hashset", "hashtable", "hopscotch", "no-std" ]
readme       = "README.md"
repository   = "https://github.com/jesterhearts/hop-hash"
description  = "A Rust hash table using 8-way hopscotch hashing with constant-time worst-case lookups, and SIMD acceleration."

[features]
default                         = [ "std", "foldhash", "density-eighty-seven-point-five", "eight-way" ]
density-eighty-seven-point-five = [  ]
density-ninety-two              = [  ]
density-ninety-seven            = [  ]
eight-way                       = [  ]
foldhash                        = [ "dep:foldhash" ]
sixteen-way                     = [  ]
std                             = [  ]
# Enable functions that allow inspecting low-level hash table statistics.
stats = [  ]

[dependencies]
cfg-if   = "1.0.3"
foldhash = { version = "0.2.0", optional = true, default-features = false }

[dev-dependencies]
clap       = { version = "4.5.48", features = [ "derive" ] }
criterion  = "0.7.0"
hashbrown  = "0.16.0"
rand       = { version = "0.9.2", default-features = false, features = [ "os_rng", "small_rng" ] }
rand_distr = "0.5.1"
siphasher  = "1.0.1"

[profile.release-with-debug]
debug    = true
inherits = "release"

[[bench]]
name    = "hashtable_comparison"
harness = false

[[example]]
name              = "stats_demo"
required-features = [ "stats", "std" ]

[package.metadata.docs.rs]
features     = [ "std", "density-eighty-seven-point-five", "stats", "foldhash" ]
rustdoc-args = [ "--generate-link-to-definition" ]
